
# This line needs to come before anything else in Cargo.toml
cargo-features = ["codegen-backend"]


[profile.dev]
codegen-backend = "cranelift"



[package]
name = "lupyd_group_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.6.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.5", features = ["full"] }
log = "0.4.21"
mls-rs = { version = "0.39.1", features = ["external_client"] }
mls-rs-crypto-openssl = "0.9.0"
mls-rs-provider-sqlite = "0.11.0"
rand = "0.8.5"
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
